@@ -29,6 +29,7 @@ class StringFunctionsTest extends Assertions {
     assert(ReplaceFunction(Literal("hello"), Literal("l"), Literal("w"))(Map()) === "hewwo")
     assert(ReplaceFunction(Literal("hello"), Literal("ell"), Literal("ipp"))(Map()) === "hippo")
     assert(ReplaceFunction(Literal("hello"), Literal("a"), Literal("x"))(Map()) === "hello")
+    assert(ReplaceFunction(Literal(null), Literal("a"), Literal("x"))(Map()) === null)
     intercept[CypherTypeException](ReplaceFunction(Literal(1042), Literal("10"), Literal("30"))(Map()))
   }
 
@@ -36,6 +37,7 @@ class StringFunctionsTest extends Assertions {
     assert(LeftFunction(Literal("hello"), Literal(2))(Map()) === "he")
     assert(LeftFunction(Literal("hello"), Literal(4))(Map()) === "hell")
     assert(LeftFunction(Literal("hello"), Literal(8))(Map()) === "hello")
+    assert(LeftFunction(Literal(null), Literal(8))(Map()) === null)
     intercept[CypherTypeException](LeftFunction(Literal(1042), Literal(2))(Map()))
     intercept[StringIndexOutOfBoundsException](LeftFunction(Literal("hello"), Literal(-4))(Map()))
   }
@@ -44,6 +46,7 @@ class StringFunctionsTest extends Assertions {
     assert(RightFunction(Literal("hello"), Literal(2))(Map()) === "lo")
     assert(RightFunction(Literal("hello"), Literal(4))(Map()) === "ello")
     assert(RightFunction(Literal("hello"), Literal(8))(Map()) === "hello")
+    assert(RightFunction(Literal(null), Literal(8))(Map()) === null)
     intercept[CypherTypeException](RightFunction(Literal(1042), Literal(2))(Map()))
     intercept[StringIndexOutOfBoundsException](RightFunction(Literal("hello"), Literal(-4))(Map()))
   }
@@ -53,6 +56,7 @@ class StringFunctionsTest extends Assertions {
     assert(SubstringFunction(Literal("hello"), Literal(4), Literal(5))(Map()) === "o")
     assert(SubstringFunction(Literal("hello"), Literal(1), Literal(3))(Map()) === "ell")
     assert(SubstringFunction(Literal("hello"), Literal(8), Literal(5))(Map()) === "")
+    assert(SubstringFunction(Literal(null), Literal(8), Literal(5))(Map()) === null)
     intercept[CypherTypeException](SubstringFunction(Literal(1042), Literal(1), Literal(2))(Map()))
     intercept[StringIndexOutOfBoundsException](SubstringFunction(Literal("hello"), Literal(-4), Literal(5))(Map()))
   }
@@ -61,37 +65,48 @@ class StringFunctionsTest extends Assertions {
     assert(LowerFunction(Literal("HELLO"))(Map()) === "hello")
     assert(LowerFunction(Literal("Hello"))(Map()) === "hello")
     assert(LowerFunction(Literal("hello"))(Map()) === "hello")
+    assert(LowerFunction(Literal(null))(Map()) === null)
     intercept[CypherTypeException](LowerFunction(Literal(1042))(Map()))
   }
+
   @Test def upperTests() {
     assert(UpperFunction(Literal("HELLO"))(Map()) === "HELLO")
     assert(UpperFunction(Literal("Hello"))(Map()) === "HELLO")
     assert(UpperFunction(Literal("hello"))(Map()) === "HELLO")
+    assert(UpperFunction(Literal(null))(Map()) === null)
     intercept[CypherTypeException](UpperFunction(Literal(1042))(Map()))
   }
+
   @Test def ltrimTests() {
     assert(LTrimFunction(Literal("  HELLO"))(Map()) === "HELLO")
     assert(LTrimFunction(Literal(" Hello"))(Map()) === "Hello")
     assert(LTrimFunction(Literal("  hello"))(Map()) === "hello")
     assert(LTrimFunction(Literal("  hello  "))(Map()) === "hello  ")
+    assert(LTrimFunction(Literal(null))(Map()) === null)
     intercept[CypherTypeException](LTrimFunction(Literal(1042))(Map()))
   }
+
   @Test def rtrimTests() {
     assert(RTrimFunction(Literal("HELLO  "))(Map()) === "HELLO")
     assert(RTrimFunction(Literal("Hello   "))(Map()) === "Hello")
     assert(RTrimFunction(Literal("  hello  "))(Map()) === "  hello")
+    assert(RTrimFunction(Literal(null))(Map()) === null)
     intercept[CypherTypeException](RTrimFunction(Literal(1042))(Map()))
   }
+
   @Test def trimTests() {
     assert(TrimFunction(Literal("  hello  "))(Map()) === "hello")
     assert(TrimFunction(Literal("  hello "))(Map()) === "hello")
     assert(TrimFunction(Literal("hello  "))(Map()) === "hello")
     assert(TrimFunction(Literal("  hello  "))(Map()) === "hello")
     assert(TrimFunction(Literal("  hello"))(Map()) === "hello")
+    assert(TrimFunction(Literal(null))(Map()) === null)
     intercept[CypherTypeException](TrimFunction(Literal(1042))(Map()))
   }
+
   @Test def stringTests() {
     assert(StrFunction(Literal(1234))(Map()) === "1234")
     assert(StrFunction(Literal(List(1,2,3,4)))(Map()) === "[1,2,3,4]")
+    assert(StrFunction(Literal(null))(Map()) === null)
   }
 }
